--- a/resume.css
+++ b/resume.css
@@ -1,8 +1,8 @@
+		@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap');
 		*{
 		margin:0;
 		padding:0;
 		box-sizing:border-box;
-		font-family: "Open Sans", sans-serif;
 		}
 		/*================ common style start ===================*/
 		.all-cover{
@@ -17,7 +17,6 @@
 		}
 		.sec-title{
 		width:100%;
-		margin:50px 0px;
 		text-align: center;
 		}
 		.sec-title h1{
@@ -46,7 +45,7 @@
 		}
 		.header{
 		width:100%;
-		background-color:#211d1d00;
+		background-color:#00000091;
 		padding: 10px;
 		color:#fff;
 		}
@@ -74,17 +73,16 @@
 		gap: 60px;
 		}
 		.nav-branding {
-
 		font-size:50px;
 		letter-spacing:1px;
 		margin-left:-50px;
-		/* color:#e66e07f5; */
+		color:#e66e07f5;
 		font-weight:600;
 		}
 		.nav-branding span{
 		font-size:40px;		
 		}
-		.nav-branding{
+		.bannercontent h1{
 		color:transparent;
 		background-image:linear-gradient(to left,#2ecc71,#3498db,#9b59b6,#f39c12);
 		-webkit-background-clip:text;
@@ -143,11 +141,11 @@
 		justify-content:center;
 		}
 		.bannercontent h3{
-		color:#e66e07f5;
+		color:#fff;
 		font-size:50px;
 		}
 		.bannercontent h1{
-		color:#fff;
+		/* color:#fff; */
 		font-size: 90px;
 		font-weight:900;
 		}
@@ -179,7 +177,7 @@
 		}
 		.btn-flex .twit i:hover{
 		background-color: rgb(77, 187, 255);
-		color:#fff;
+		color:#000;
 		border:none;
 		transition: 1s linear;
 		}
@@ -198,6 +196,7 @@
 		/*============ service start=============*/
 		.servicesection{	
 		padding:80px 0;
+		position:relative;
 		padding-bottom: 70px;
 		}
 		.flexservice{
@@ -209,12 +208,12 @@
 		width:30%;
 		position: relative;
 		}
-		.flexservice::before{
+		.serviceone::before{
 		position:absolute;
 		content:"";
 		width:80px;
-		bottom:-57px;
-		left:320px;
+		bottom:-75px;
+		left:-165px;
 		border:3px solid #e66e07f5;
 		border-radius:10px;
 		height:80px;
@@ -223,8 +222,8 @@
 		position:absolute;
 		content:"";
 		width:80px;
-		bottom:2px;
-		left:380px;
+		bottom:-70px;
+		left:320px;
 		border:3px solid #e66e07f5;
 		border-radius:10px;
 		height:80px;
@@ -263,6 +262,7 @@
 		margin-top: 20px;
 		}
 		.servicepara{
+		text-indent:280px;
 		color:#999;
 		margin-top: 15px;
 		font-size: 22px;
@@ -277,6 +277,7 @@
 		}
 		.serviceone{
 		display: flex;
+		position:relative;
 		margin-top: 10px;
 		line-height: 40px;
 		}
@@ -308,7 +309,7 @@
 		}
 		/*============= menu start============*/
 		.menusection{	
-		padding:50px 0;
+		padding-top:80px;
 		}
 		.flexmenu{
 		display:flex;
@@ -316,9 +317,42 @@
 		}
 		.menucontent{
 		width:45%;
+		position:relative;
 		}
 		.menucontent2{
+		position:relative;
 		width:45%;
+		}
+		.menucontent2::after{
+		position:absolute;
+		content:"";
+		border-left:3px solid #e66e07f5;
+		height:330px;
+		border-radius:10px;
+		top:-20px;
+		left:-70px;
+		}
+		.menucontent2::before{
+		position:absolute;
+		content:"";
+		border:1px solid #e66e07f5;
+		height:20px;
+		width:20px;
+		background:#e66e07f5;
+		border-radius:50%;
+		top:0;
+		left:-79px;
+		}
+		.menucontent::before{
+		position:absolute;
+		content:"";
+		border:1px solid #e66e07f5;
+		height:20px;
+		width:20px;
+		background:#e66e07f5;
+		border-radius:50%;
+		bottom:140px;
+		right:-73px;
 		}
 		.menucontent h3{
 		color:#e66e07f5;
@@ -332,6 +366,7 @@
 		}
 		.menucontent p{
 		color:#999;
+		text-indent:50px;
 		margin-top: 25px;
 		font-size: 22px;
 		line-height: 30px;
@@ -354,6 +389,9 @@
 		margin-top: 45px;
 		}
 		/*=========Portfolio start=======*/
+		.portfoliosection{
+		padding-top:80px;
+		}
 		.flexspecial{
 		display:flex;
 		flex-wrap:wrap;
@@ -383,14 +421,15 @@
 		transition: all  ease 0.5s;
 		}
 		/*=========contact start=======*/
-		#contact-sec{
-		padding:10px 0;
+		.contact{
+		padding-top:80px;
 		}
 		.servicesect{
 		display:flex;
 		flex-wrap:wrap;
 		justify-content:space-evenly;
 		cursor:pointer;
+		margin-top:50px;
 		}
 		.col-lg-6{
 		width:45%
@@ -477,12 +516,45 @@
 
 
         /*================= Mobile View =====================*/
-		@media (max-width:768px){
+		@media(max-width:576px){
 		.bannersection{
 		width:100%;
 		}
+		.hamburger {
+		display: block;
+		background:#fff;
+		}
+		.hamburger.active .bar:nth-child(2) {
+		opacity: 0;
+		}
+		.hamburger.active .bar:nth-child(1) {
+		transform: translateY(8px) rotate(45deg);
+		}
+		.hamburger.active .bar:nth-child(3) {
+		transform: translateY(-8px) rotate(-45deg);
+		}
+		.nav-menu {
+		position: fixed;
+		left: -100%;
+		top: 80px;
+		gap: 0;
+		flex-direction: column;
+		background:#ccc;
+		width: 100%;
+		}
+		.nav-item {
+		margin: 12px 0;
+		/* font-size: 42px; */
+		}
+		.nav-menu.active {
+		left: 0;
+		}
+		.header{
+		background-color:#00000091;
+		}
 		.nav-menu a{
 		color:#e66e07f5;
+		/* display:none; */
 		}
 		.flexservice{
 		display:flex;
@@ -508,29 +580,8 @@
 		}
 		.servicecontent{
 		width:100%;
+		position: relative;
 		padding-bottom:50px;
-		}
-		.flexservice::before{
-		position:absolute;
-		/* display:none; */
-		content:"";
-		width:50px;
-		top:-105px;
-		left:145px;
-		border:5px solid #e66e07f5;
-		border-radius:50%;
-		height:50px;
-		}
-		.flexservice::after{
-		position:absolute;
-		content:"";
-		width:60px;
-		top:-110px;
-		left:140px;
-		border:5px solid #e66e07f5;
-		border-radius:10px;
-		height:60px;
-		/* display:none; */
 		}
 		.servicecontent .img-2{
 		width:80%;
@@ -545,6 +596,37 @@
 		width:100%;
 		position:relative;
 		}
+		.serviceone::before{
+		position:absolute;
+		content:"";
+		width:80px;
+		bottom:-75px;
+		left:-165px;
+		border:3px solid #e66e07f5;
+		border-radius:10px;
+		height:80px;
+		display:none;
+		}
+		.flexservice::after{
+		display:none;
+		position:absolute;
+		content:"";
+		width:80px;
+		bottom:-70px;
+		left:320px;
+		border:3px solid #e66e07f5;
+		border-radius:10px;
+		height:80px;
+		}
+		.servicecontent2 h2::after{
+		display:none;
+		position:absolute;
+		content:"";
+		width:80px;
+		top:39px;
+		left:20px;
+		border:2px solid #ccc;
+		}
 		.servicecontent2 h2{
 		font-size:50px;
 		text-align:center;
@@ -558,18 +640,10 @@
 		flex-wrap:wrap;
 		}
 		.servicepara{
-		font-size:30px;
+		text-indent:10px;
+		font-size:24px;
 		line-height:40px;
 		font-weight:600;
-		}
-		.servicecontent2 h2::after{
-		/* position:absolute; */
-		/* content:""; */
-		/* width:180px; */
-		/* top:55px; */
-		/* left:100px; */
-		/* border:2px solid #ccc; */
-		display:none;
 		}
 		.back-box h3{
 		font-size:30px;
@@ -585,6 +659,7 @@
 		flex-wrap:wrap;
 		}
 		.menucontent{
+		position:relative;
 		width:100%;
 		}
 		.menucontent h3{
@@ -599,7 +674,42 @@
 		letter-spacing:2px;
 		}
 		.menucontent2{
+		position:relative;
 		width:100%;
+		}
+		.menucontent2::after{
+		display:none;
+		position:absolute;
+		content:"";
+		border-left:3px solid #e66e07f5;
+		height:330px;
+		border-radius:10px;
+		top:-20px;
+		left:-70px;
+		}
+		.menucontent2::before{
+		display:none;
+		position:absolute;
+		content:"";
+		border:1px solid #e66e07f5;
+		height:20px;
+		width:20px;
+		background:#e66e07f5;
+		border-radius:50%;
+		top:0;
+		left:-79px;
+		}
+		.menucontent::before{
+		display:none;
+		position:absolute;
+		content:"";
+		border:1px solid #e66e07f5;
+		height:20px;
+		width:20px;
+		background:#e66e07f5;
+		border-radius:50%;
+		bottom:140px;
+		right:-73px;
 		}
 		.menucontent2{
 		padding:50px 0px;
@@ -649,7 +759,7 @@
 		font-size:22px;
 		}
 		}
-		@media (min-width:768px) and (max-width:992px){
+		@media(min-width:576px) and (max-width:768px){
 		.bannercontent h3{
 		font-size:50px;
 		text-align:center;
@@ -661,28 +771,6 @@
 		.bannercontent h4{
 		text-align:center;
 		font-size:40px;	   
-		}
-		.flexservice::before{
-		position:absolute;
-		display:none;
-		content:"";
-		width:50px;
-		top:-105px;
-		left:145px;
-		border:5px solid #e66e07f5;
-		border-radius:50%;
-		height:50px;
-		}
-		.flexservice::after{
-		position:absolute;
-		content:"";
-		width:60px;
-		top:-110px;
-		left:140px;
-		border:5px solid #e66e07f5;
-		border-radius:10px;
-		height:60px;
-		display:none;
 		}
 		.flexspecial{
 		display:flex;
@@ -698,10 +786,79 @@
 		.col-lg-6{
 		width:45%;
 		}
+		.menucontent2{
+		position:relative;
 		}
-		@media(max-width:900px) {
+		.menucontent{
+		position:relative;
+		}
+		.menucontent2::after{
+		display:none;
+		position:absolute;
+		content:"";
+		border-left:3px solid #e66e07f5;
+		height:330px;
+		border-radius:10px;
+		top:-20px;
+		left:-70px;
+		}
+		.menucontent2::before{
+		display:none;
+		position:absolute;
+		content:"";
+		border:1px solid #e66e07f5;
+		height:20px;
+		width:20px;
+		background:#e66e07f5;
+		border-radius:50%;
+		top:0;
+		left:-79px;
+		}
+		.menucontent::before{
+		display:none;
+		position:absolute;
+		content:"";
+		border:1px solid #e66e07f5;
+		height:20px;
+		width:20px;
+		background:#e66e07f5;
+		border-radius:50%;
+		bottom:140px;
+		right:-73px;
+		}
+		.serviceone{
+		position:relative;
+		}
+		.serviceone::before{
+		position:absolute;
+		content:"";
+		width:80px;
+		bottom:-75px;
+		left:-165px;
+		border:3px solid #e66e07f5;
+		border-radius:10px;
+		height:80px;
+		display:none;
+		}
+		.flexservice{
+		position:relative;
+		}
+		.flexservice::after{
+		display:none;
+		position:absolute;
+		content:"";
+		width:80px;
+		bottom:-70px;
+		left:320px;
+		border:3px solid #e66e07f5;
+		border-radius:10px;
+		height:80px;
+		}
+		}
+		@media(min-width:768px) and (max-width:996px){
 		.hamburger {
 		display: block;
+		background:#fff;
 		}
 		.hamburger.active .bar:nth-child(2) {
 		opacity: 0;
@@ -720,7 +877,6 @@
 		flex-direction: column;
 		background:#ccc;
 		width: 100%;
-
 		}
 		.nav-item {
 		margin: 12px 0;
@@ -728,5 +884,44 @@
 		}
 		.nav-menu.active {
 		left: 0;
+		}
+		.servicecontent{
+		position:relative;
+		}
+		.servicecontent .img-2{
+		width: 80%;
+		position: absolute;
+		top:200px;
+		left: -50px;
+		bottom: 0;
+		border-radius:15px;
+		}
+		.serviceone{
+		position:relative;
+		}
+		.serviceone::before{
+		position:absolute;
+		content:"";
+		width:80px;
+		bottom:-75px;
+		left:-165px;
+		border:3px solid #e66e07f5;
+		border-radius:10px;
+		height:80px;
+		display:none;
+		}
+		.flexservice{
+		position:relative;
+		}
+		.flexservice::after{
+		display:none;
+		position:absolute;
+		content:"";
+		width:80px;
+		bottom:-70px;
+		left:320px;
+		border:3px solid #e66e07f5;
+		border-radius:10px;
+		height:80px;
 		}
 		}
